# drome

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.web.json  vite.config.ts
.github/workflows/: build.yml  ci.yml
crates/app_desktop/: Cargo.toml
crates/app_desktop/src/: main.rs
crates/cherry-ai/: Cargo.toml
crates/cherry-ai/src/: lib.rs  openai.rs  provider.rs
crates/cherry-app/: Cargo.toml  build.rs
crates/cherry-app/src/: main.rs
crates/cherry-app/windows/: cherry-app.manifest
crates/cherry-core/: Cargo.toml
crates/cherry-core/src/: chat.rs  feature.rs  file.rs  integration.rs  knowledge.rs  lib.rs  note.rs  provider.rs  settings.rs
crates/cherry-services/: Cargo.toml
crates/cherry-services/src/: lib.rs  migration.rs  services.rs
crates/cherry-store/: Cargo.toml
crates/cherry-store/src/: lib.rs  migrations.rs  store.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core_orchestrator/: Cargo.toml
crates/core_orchestrator/src/: lib.rs
crates/core_types/: Cargo.toml
crates/core_types/src/: lib.rs
crates/i18n/: Cargo.toml
crates/i18n/src/: lib.rs
crates/mcp_runtime/: Cargo.toml
crates/mcp_runtime/src/: lib.rs
crates/provider_zed/: Cargo.toml
crates/provider_zed/src/: lib.rs
crates/secrets/: Cargo.toml
crates/secrets/src/: lib.rs
crates/storage_sqlite/: Cargo.toml
crates/storage_sqlite/src/: lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  main.rs  state.rs
src-tauri/src/commands/: aes.rs  app.rs  backup.rs  cherryai.rs  config.rs  file.rs  fs.rs  http.rs  ipc.rs  mcp.rs  migration.rs  mini_window.rs  mod.rs  store_sync.rs  system.rs  trace.rs  window.rs  zip.rs
src/renderer/: index.html  miniWindow.html  selectionAction.html  selectionToolbar.html  traceWindow.html
src/renderer/src/: Router.tsx
src/renderer/src/aiCore/legacy/clients/anthropic/: AnthropicAPIClient.ts  AnthropicVertexClient.ts
src/renderer/src/aiCore/provider/: providerConfig.ts
src/renderer/src/bridge/: api.ts  boot.ts  globals.d.ts  ipcRendererShim.ts  windowApiType.ts  wordExport.ts
src/renderer/src/components/MinApp/: MinApp.tsx
src/renderer/src/components/Tab/: TabContainer.tsx
src/renderer/src/config/: env.ts  minapps.ts
src/renderer/src/pages/home/Inputbar/components/: InputbarCore.tsx
src/renderer/src/pages/home/Messages/: MessageGroup.tsx
src/renderer/src/pages/home/Messages/Blocks/: index.tsx
src/renderer/src/pages/minapps/: NewAppButton.tsx
src/renderer/src/pages/settings/DisplaySettings/: DisplaySettings.tsx
src/renderer/src/pages/settings/MCPSettings/: AddMcpServerModal.tsx  InstallNpxUv.tsx
src/renderer/src/services/: LoggerService.ts  MemoryService.ts
src/renderer/src/services/messageStreaming/callbacks/: baseCallbacks.ts
src/renderer/src/store/thunk/__tests__/: streamCallback.integration.test.ts
src/renderer/src/utils/: dataLimit.ts  env.ts
