[workspace]
resolver = "2"
members = [
    "crates/app_desktop",
    "crates/core_types",
    "crates/core_orchestrator",
    "crates/provider_zed",
    "crates/mcp_runtime",
    "crates/storage_sqlite",
    "crates/secrets",
    "crates/config",
    "crates/i18n",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
authors = ["Drome Contributors"]
repository = "https://github.com/example/drome"

[workspace.dependencies]
anyhow = "1.0.97"
async-trait = "0.1.87"
base64 = "0.22.1"
chrono = { version = "0.4.40", features = ["serde"] }
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.0", features = ["full"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter", "json"] }
uuid = { version = "1.15.1", features = ["serde", "v4"] }
indexmap = { version = "2.8.0", features = ["serde"] }
parking_lot = "0.12.3"
tempfile = "3.18.0"
rand = "0.8.5"
sha2 = "0.10.8"
argon2 = "0.5.3"
aes-gcm = "0.10.3"
dirs = "6.0.0"
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio-rustls", "uuid", "chrono"] }
gpui = "0.2.2"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls", "stream"] }

rust-mcp-sdk = { version = "0.8.3", default-features = false, features = ["client", "stdio", "sse", "streamable-http"] }
