[workspace]
members = [
  "crates/cherry-core",
  "crates/cherry-store",
  "crates/cherry-ai",
  "crates/cherry-services",
  "crates/cherry-app",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Cherry Studio Rust Migration"]
license = "AGPL-3.0"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.43", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
rusqlite = { version = "0.32", features = ["bundled", "chrono", "uuid", "serde_json"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
parking_lot = "0.12"
gpui = { version = "0.2.2", default-features = false, features = ["x11", "wayland"] }
