[package]
name = "drome"
version = "0.1.0"
description = "Drome - Tauri rewrite of Cherry Studio"
authors = ["drome contributors"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = [] }
tauri-plugin-dialog = "2.4.0"
tauri-plugin-shell = "2.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
zip = "7.4.0"
flate2 = "1.1.2"
walkdir = "2.5.0"
dirs = "6.0.0"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "time"] }
