[package]
name = "drome"
version = "0.1.0"
description = "Drome - Tauri rewrite of Cherry Studio"
authors = ["drome contributors"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = [] }
tauri-plugin-dialog = "2.4.0"
tauri-plugin-shell = "2.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
zip = "7.4.0"
flate2 = "1.1.2"
walkdir = "2.5.0"
dirs = "6.0.0"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "time"] }
fs2 = "0.4.3"
base64 = "0.22.1"
chrono = { version = "0.4.40", default-features = false, features = ["clock"] }
aes = "0.8.4"
cbc = "0.1.2"
cipher = { version = "0.4.4", features = ["block-padding"] }
hex = "0.4.3"
gethostname = "1.0.2"
lopdf = "0.39.0"
md5 = "0.7.0"
mime_guess = "2.0.5"
notify = "6.1.1"
pdf-extract = "0.10.0"
reqwest = { version = "0.12.12", default-features = false, features = ["blocking", "rustls-tls"] }
sysinfo = "0.38.1"
uuid = { version = "1.18.1", features = ["v4"] }
