[package]
name = "cherry-services"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
rusqlite.workspace = true
uuid.workspace = true
cherry-ai = { path = "../cherry-ai" }
cherry-core = { path = "../cherry-core" }
cherry-store = { path = "../cherry-store" }
