[package]
name = "mcp_runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
core_types = { path = "../core_types" }
futures.workspace = true
parking_lot.workspace = true
rust-mcp-sdk.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
